# agent_sales

./: .dockerignore  .gitignore  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  readme.md  test.py  ui.py
.next/: prerender-manifest.json  trace
.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  @vercel.js  aria-hidden.js  class-variance-authority.js  clsx.js  framer-motion.js  geist.js  get-nonce.js  lucide-react.js  motion-dom.js  motion-utils.js  react-remove-scroll-bar.js  react-remove-scroll.js  react-style-singleton.js  tailwind-merge.js  tslib.js  use-callback-ref.js  use-sidecar.js
agents/: agent_state.py  config.py  nodes.py  tools.py
backend/: .gitignore  Dockerfile  Untitled.ods  app.py  langgraph.json  main.py  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/agents/: agent_state.py  config.py  graph.py  nodes.py  tools.py
backend/api/routes/: chat.py  chat_history.py  download_file.py  new_chat.py  upload_file.py
backend/settings/: db.py  loader.py  settings.yaml
backend/tools/: data_analyzer.py  linkedin.py  map_scrapper.py  url_scraper.py  web_search.py  zauba_corp.py
frontend/: .dockerignore  .gitignore  Dockerfile  folder-structure.txt  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-header.tsx  chat-message.tsx  chat-window.tsx  message-input.tsx  session-selector.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: api.tsx
settings/: settings.yaml
tools/: data_analyzer.py  web_scrapper.py  zauba_corp.py
(+17 files in other folders)
